[package]
name = "yew-nonograms"
version = "0.1.0"
edition = "2021"

[dependencies]
yew = {version = "0.20.0", features = ["csr"] }
yew-router = "0.17.0"
itertools = "0.10.5"
web-sys = {version = "0.3.60", features = ["HtmlAnchorElement", "HtmlDocument", "Navigator"] }
base64 = "0.13.0"
wasm-logger = "0.2.0"
log = "0.4.17"
wasm-bindgen = "0.2.83"

[profile.release]
# reduce binary size
panic = 'abort'
# compile entire project in a single compilation unit
codegen-units = 1
# aggressive optimization for size
opt-level = 'z'
# link time optimization
lto = true
